<resources>
    <string name="app_name">열쇠 꾸러미</string>
    <string name="new_register">새 계정 등록</string>
    <string name="exit">종료</string>
    <string name="site_name">사이트 이름</string>
    <string name="url">URL</string>
    <string name="user">사용자 계정</string>
    <string name="password">비밀번호</string>
    <string name="check_Password">비밀번호 확인</string>
    <string name="cancel">취소</string>
    <string name="register">등록</string>


</resources>
